<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.github.ruediste</groupId>
		<artifactId>ossparent</artifactId>
		<version>1.3</version>
	</parent>

	<groupId>com.github.ruediste.salta</groupId>
	<artifactId>salta-parent</artifactId>
	<packaging>pom</packaging>
	<version>1.2-SNAPSHOT</version>
	<name>Salta Parent</name>

	<url>https://github.com/ruediste/salta</url>

	<description> Dependency Injection Framework similar to guice, but faster and more flexible</description>
	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Ruedi Steinmann</name>
			<email>ruediste [at] gmail [dot] com</email>
			<url>http://github.com/ruediste</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:ruediste/salta.git</connection>
		<developerConnection>scm:git:git@github.com:ruediste/salta.git</developerConnection>
		<url>git@github.com:ruediste/salta.git</url>
		<tag>HEAD</tag>
	</scm>


	<modules>
		<module>core</module>
		<module>guice</module>
		<module>jsr330</module>
		<module>core-test</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.28.2</version>
			<scope> test </scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>28.0-jre</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy</artifactId>
				<version>1.10.1</version>
			</dependency>
			<dependency>
				<groupId>net.bytebuddy</groupId>
				<artifactId>byte-buddy-agent</artifactId>
				<version>1.10.1</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject-tck</artifactId>
				<version>1</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<source>12</source>
					<target>12</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>--illegal-access=deny</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>